feat: wip strict templates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -95,7 +95,7 @@
 					<oeb-dropdown
 						[menuItems]="accountMenuItems"
 						[trigger]="accountMenuTrigger"
-						triggerxx="{{ 'General.account' | translate }}"
+						trigger="{{ 'General.account' | translate }}"
 						triggerIcon="lucideUser"
 						triggerStyle="oeb-navitem tw-cursor-pointer !tw-leading-none !tw-py-1"
 					></oeb-dropdown>
