--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -177,11 +177,9 @@
 						[badgeImage]="badge.badge.image"
 						[badgeDescription]="badge.badge.description"
 						[badgeSlug]="badge.badge.slug"
-						[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer.name"
+						[issuerTitle]="badge.issuerName ? badge.issuerName : badge.badge.issuer"
 						[badgeIssueDate]="badge.badge.createdAt"
-						public="true"
-						[publicUrl]="badge.badge.id"
-						[badgeClass]="true"
+						[public]="true"
 					></bg-badgecard>
 				</div>
 			</ng-container>
@@ -214,7 +212,7 @@
 						<div class="tw-grid tw-grid-cols-learningpaths tw-gap-6">
 							<bg-learningpathcard
 								*ngFor="let lp of learningPaths"
-								[badgeImage]="lp.image"
+								[badgeImage]="lp.participationBadge_image"
 								[name]="lp.name"
 								[issuerTitle]="issuer.name"
 								[description]="lp.description"
