--- a/src/app/common/components/learningpath-detail/oeb-learning-path.component.html
+++ b/src/app/common/components/learningpath-detail/oeb-learning-path.component.html
@@ -128,10 +128,9 @@
 							[badgeSlug]="badge.badge.slug"
 							[issuerTitle]="badge?.badge.issuerName ? badge.badge.issuerName : issuer.name"
 							[badgeIssueDate]="badge.badge.created_at"
-							public="true"
+							[public]="true"
 							[publicUrl]="'/public/badges/' + badge.badge.slug"
 							[competencies]="badge.badge.extensions['extensions:CompetencyExtension']"
-							[badgeClass]="true"
 						></bg-badgecard>
 					</div>
 				</div>
