--- a/src/app/components/issuer-card/issuer-card.component.html
+++ b/src/app/components/issuer-card/issuer-card.component.html
@@ -5,8 +5,8 @@
 		<img
 			class="tw-w-24 tw-aspect-square"
 			[loaded-src]="issuer?.image"
-			[loading-src]="issuer?.imagePlaceholder"
-			[error-src]="issuer?.imagePlaceholder"
+			[loading-src]="issuerImagePlaceHolderUrl"
+			[error-src]="issuerImagePlaceHolderUrl"
 			alt="{{ issuer?.name }} avatar"
 		/>
 		<div class="tw-content-center oeb-break-words">
