--- a/src/app/issuer/components/badgeclass-edit-copypermissions/badgeclass-edit-copypermissions.component.html
+++ b/src/app/issuer/components/badgeclass-edit-copypermissions/badgeclass-edit-copypermissions.component.html
@@ -56,7 +56,7 @@
 							width="max_content"
 							[disabled]="!!savePromise"
 							[loading-promises]="[savePromise]"
-							loading-message="{{ submittingText }}"
+							loading-message="{{ 'General.save' | translate }}"
 							text="{{ 'General.save' | translate }}"
 						>
 						</oeb-button>
