--- a/src/app/issuer/components/badgeclass-issue-bulk-award-preview/badgeclass-issue-bulk-award-preview.component.html
+++ b/src/app/issuer/components/badgeclass-issue-bulk-award-preview/badgeclass-issue-bulk-award-preview.component.html
@@ -34,7 +34,7 @@
 									[id]="'select' + columnId"
 									#selectDest
 									[value]="columnHeaderName.destColumn"
-									(change)="mapDestNameToSourceName(columnId, selectDest.value)"
+									(change)="mapDestNameToSourceName(columnId, $any(selectDest.value))"
 								>
 									<option value="NA">N/A</option>
 									<option value="email">E-Mail</option>
