--- a/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
+++ b/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
@@ -140,7 +140,7 @@
 					type="submit"
 					[text]="'QrCode.buttonCreate' | translate"
 					[loading-promises]="qrCodePromise"
-					disabled-when-requesting="true"
+					[disabled-when-requesting]="true"
 				>
 				</oeb-button>
 			</div>
