--- a/src/app/issuer/components/learningpath-create-steps/learningpath-badges/learningpath-badges.component.html
+++ b/src/app/issuer/components/learningpath-create-steps/learningpath-badges/learningpath-badges.component.html
@@ -52,9 +52,9 @@
 						[badgeImage]="badge.image"
 						[badgeDescription]="badge.description"
 						[badgeSlug]="badge.slug"
-						[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer.name"
+						[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer"
 						[badgeIssueDate]="badge.createdAt"
-						public="true"
+						[public]="true"
 						[publicUrl]="badge.url"
 						[badgeClass]="true"
 						[issuerSlug]="badge.issuerSlug"
@@ -83,9 +83,9 @@
 							[badgeImage]="badge.image"
 							[badgeDescription]="badge.description"
 							[badgeSlug]="badge.slug"
-							[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer.name"
+							[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer"
 							[badgeIssueDate]="badge.createdAt"
-							public="true"
+							[public]="true"
 							[publicUrl]="badge.url"
 							[badgeClass]="true"
 							[competencies]="badge.extension['extensions:CompetencyExtension']"
@@ -114,9 +114,9 @@
 							[badgeImage]="badge.image"
 							[badgeDescription]="badge.description"
 							[badgeSlug]="badge.slug"
-							[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer.name"
+							[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer"
 							[badgeIssueDate]="badge.createdAt"
-							public="true"
+							[public]="true"
 							[publicUrl]="badge.url"
 							[badgeClass]="true"
 							[competencies]="badge.extension['extensions:CompetencyExtension']"
