--- a/src/app/catalog/components/badge-catalog/badge-catalog.component.html
+++ b/src/app/catalog/components/badge-catalog/badge-catalog.component.html
@@ -8,9 +8,9 @@
 					<h1 hlmH1 class="tw-text-oebblack">{{ 'Badge.catalogHeadline' | translate }}</h1>
 					<h1 hlmH1 class="lg:tw-pl-[10%] tw-font-black tw-text-purple">
 						<span [countUp]="badges.length">{{ badges.length }}</span
-						>{{ ' ' | i18nPlural: plural['badges'] }} in
+						>{{ null | i18nPlural: plural['badges'] }} in
 						<span [countUp]="issuers.length">{{ issuers.length }}</span
-						>{{ ' ' | i18nPlural: plural['issuer'] }}
+						>{{ null | i18nPlural: plural['issuer'] }}
 					</h1>
 				</div>
 			</div>
@@ -48,7 +48,6 @@
 							class="oeb tw-w-[12rem]"
 							[disabled]="!!groupControl?.value && groupControl?.value !== '---'"
 							[control]="sortControl"
-							[result]="badgeResults"
 						>
 						</oeb-global-sort-select>
 
@@ -63,18 +62,18 @@
 						></oeb-select> -->
 
 						<oeb-select
-							actionBar="true"
+							[actionBar]="true"
 							placeholder="Tags"
 							class="oeb tw-w-[12rem]"
 							[options]="tagsOptions"
 							[control]="tagsControl"
 							[autofocus]="true"
-							noTopMargin="true"
-							multiple="true"
+							[noTopMargin]="true"
+							[multiple]="true"
 							[dropdownMaxHeight]="250"
 						></oeb-select>
 						<!-- Use this template to save the tag selection when filtering was moved to the server side  -->
-						<ng-template #tagFilterTemplate>
+						<!-- <ng-template #tagFilterTemplate>
 							<div class="tw-w-full tw-flex tw-flex-col tw-gap-2">
 								<oeb-button width="full_width" size="sm" [text]="'General.save' | translate">
 								</oeb-button>
@@ -87,7 +86,7 @@
 								>
 								</oeb-button>
 							</div>
-						</ng-template>
+						</ng-template> -->
 					</div>
 				</div>
 				<div class="subtitle-wrapper">
@@ -114,11 +113,10 @@
 							[badgeImage]="badge.image"
 							[badgeDescription]="badge.description"
 							[badgeSlug]="badge.slug"
-							[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer.name"
+							[issuerTitle]="badge.issuerName"
 							[badgeIssueDate]="badge.createdAt"
-							public="true"
+							[public]="true"
 							[publicUrl]="badge.url"
-							[badgeClass]="true"
 							[issuerSlug]="badge.issuerSlug"
 							[competencies]="badge.extension['extensions:CompetencyExtension']"
 							[tags]="badge.tags"
@@ -144,11 +142,10 @@
 								[badgeImage]="badge.image"
 								[badgeDescription]="badge.description"
 								[badgeSlug]="badge.slug"
-								[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer.name"
+								[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer"
 								[badgeIssueDate]="badge.createdAt"
-								public="true"
+								[public]="true"
 								[publicUrl]="badge.url"
-								[badgeClass]="true"
 								[competencies]="badge.extension['extensions:CompetencyExtension']"
 							></bg-badgecard>
 						</div>
@@ -173,11 +170,10 @@
 								[badgeImage]="badge.image"
 								[badgeDescription]="badge.description"
 								[badgeSlug]="badge.slug"
-								[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer.name"
+								[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer"
 								[badgeIssueDate]="badge.createdAt"
-								public="true"
+								[public]="true"
 								[publicUrl]="badge.url"
-								[badgeClass]="true"
 								[competencies]="badge.extension['extensions:CompetencyExtension']"
 							></bg-badgecard>
 						</div>
