--- a/src/app/catalog/components/issuer-catalog/issuer-catalog.component.html
+++ b/src/app/catalog/components/issuer-catalog/issuer-catalog.component.html
@@ -9,7 +9,7 @@
 				<span hlmH1 class="lg:tw-pl-[10%] tw-text-purple tw-font-black tw-break-words">
 					<span [countUp]="issuers.length"> </span>
 					<span>
-						{{ ' ' | i18nPlural: plural['issuerText'] }}
+						{{ null | i18nPlural: plural['issuerText'] }}
 					</span>
 				</span>
 			</ng-template>
@@ -44,17 +44,16 @@
 								class="oeb tw-w-[12rem]"
 								[disabled]="!!categoryControl.value && categoryControl.value !== '---'"
 								[control]="sortControl"
-								[result]="issuerResults"
 							>
 							</oeb-global-sort-select>
 							<oeb-select
-								actionBar="true"
+								[actionBar]="true"
 								class="md:tw-w-[180px] oeb"
 								[options]="categoryOptions"
 								[control]="categoryControl"
 								placeholder="{{ 'Issuer.categories.allCategories' | translate }}"
 								[autofocus]="true"
-								noTopMargin="true"
+								[noTopMargin]="true"
 							></oeb-select>
 						</div>
 
@@ -78,17 +77,15 @@
 				</div>
 
 				<ng-container *ngIf="badgesDisplay == 'grid'">
-					<ng-container *ngIf="!groupByCategory">
-						<div class="tw-grid sm:tw-grid-cols-issuer tw-gap-6 tw-w-full" [@stagger]>
-							<oeb-issuer-card
-								*ngFor="let issuer of issuerResults"
-								[@appearAnimation]="state"
-								[issuer]="issuer"
-								[plural]="plural"
-								(navigate)="navigateToIssuer(issuer)"
-							></oeb-issuer-card>
-						</div>
-					</ng-container>
+					<div class="tw-grid sm:tw-grid-cols-issuer tw-gap-6 tw-w-full" [@stagger]>
+						<oeb-issuer-card
+							*ngFor="let issuer of issuerResults"
+							[@appearAnimation]="state"
+							[issuer]="issuer"
+							[plural]="plural"
+							(navigate)="navigateToIssuer(issuer)"
+						></oeb-issuer-card>
+					</div>
 				</ng-container>
 
 				<div
