--- a/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
+++ b/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
@@ -8,13 +8,13 @@
 					<h1 hlmH1 class="tw-text-oebblack">{{ 'LearningPath.catalogHeadline' | translate }}</h1>
 					<h1 hlmH1 class="lg:tw-pl-[10%] tw-font-black tw-text-purple">
 						<ng-container *ngIf="learningPaths.length === 0">
-							{{ plural.learningPath['=0'] }}
+							{{ plural['learningPath']['=0'] }}
 						</ng-container>
 						<ng-container *ngIf="learningPaths.length > 0">
 							<span [countUp]="learningPaths.length">{{ learningPaths.length }}</span
-							>{{ ' ' | i18nPlural: plural['learningPath'] }} in
+							>{{ null | i18nPlural: plural['learningPath'] }} in
 							<span [countUp]="issuersWithLps.length">{{ issuersWithLps.length }}</span
-							>{{ ' ' | i18nPlural: plural['issuer'] }}
+							>{{ null | i18nPlural: plural['issuer'] }}
 						</ng-container>
 					</h1>
 				</div>
@@ -49,7 +49,6 @@
 							placeholder="{{ 'Badge.sortBy' | translate }}"
 							class="oeb tw-w-[12rem]"
 							[control]="sortControl"
-							[result]="learningPathResults"
 						>
 						</oeb-global-sort-select>
 					</div>
@@ -71,7 +70,7 @@
 						<bg-learningpathcard
 							*ngFor="let lp of learningPathResults"
 							[@appearAnimation]="state"
-							[badgeImage]="lp._apiModel.participationBadge_image"
+							[badgeImage]="lp.participationBadgeImage"
 							[name]="lp.name"
 							[issuerTitle]="lp.issuer_name"
 							[description]="lp.description"
@@ -99,7 +98,7 @@
 				<div class="tw-grid min-[450px]:tw-grid-cols-learningpaths tw-gap-6 tw-items-center">
 					<bg-learningpathcard
 						*ngFor="let lp of issuerGroup.learningpaths"
-						[badgeImage]="lp._apiModel.participationBadge_image"
+						[badgeImage]="lp.participationBadgeImage"
 						[name]="lp.name"
 						[issuerTitle]="lp.issuer_name"
 						[description]="lp.description"
