--- a/src/app/issuer/components/badgeclass-create/badgeclass-create.component.html
+++ b/src/app/issuer/components/badgeclass-create/badgeclass-create.component.html
@@ -76,7 +76,7 @@
 				<badgeclass-edit-form
 					#badgeimage
 					(save)="badgeClassCreated($event)"
-					(cancel)="creationCanceled($event)"
+					(cancel)="creationCanceled()"
 					[scrolled]="scrolled"
 					[issuer]="issuer"
 					[category]="category"
