--- a/src/app/issuer/components/learningpath-create-steps/learningpath-badge-order/learningpath-badge-order.component.html
+++ b/src/app/issuer/components/learningpath-create-steps/learningpath-badge-order/learningpath-badge-order.component.html
@@ -13,7 +13,7 @@
 					dndDraggable
 					[dndDraggable]="item"
 					(dndDrop)="onDrop($event, i, draggableList)"
-					[dndDropzone]="{ allowedTypes: ['item-type'] }"
+					dndDropzone
 				>
 					<div>
 						<span hlmP class="tw-font-extrabold tw-color-purple">{{ i + 1 }}</span>
