--- a/src/app/public/components/issuer/issuer.component.html
+++ b/src/app/public/components/issuer/issuer.component.html
@@ -6,9 +6,8 @@
 				[badges]="badgeClasses"
 				[learningPaths]="learningPaths"
 				[public]="true"
-				[issuerActionsMenu]="moreMenu"
 				[issuer]="issuer"
-				[issuerPlaceholderSrc]="issuerPlaceholderSrc"
+				[issuerPlaceholderSrc]="issuerImagePlaceholderUrl"
 			></oeb-issuer-detail>
 		</ng-template>
 	</div>
