feat(about): update bmftr logo

--- a/src/app/public/components/about/about.component.html
+++ b/src/app/public/components/about/about.component.html
@@ -136,7 +136,7 @@
 					</div>
 					<div class="supporter-mobile tw-flex tw-flex-col tw-items-center">
 						<img
-							src="../assets/oeb/images/aboutpage/bmbf_logo_new.jpg"
+							src="../assets/oeb/images/aboutpage/bmftr_logo_de.png"
 							class="tw-w-[279px]"
 							alt="BMBF logo"
 						/>
@@ -533,7 +533,7 @@
 					</div>
 					<div class="supporter-mobile tw-flex tw-flex-col tw-items-center">
 						<img
-							src="../assets/oeb/images/aboutpage/bmbf_logo_new.jpg"
+							src="../assets/oeb/images/aboutpage/bmftr_logo_en.png"
 							class="tw-w-[279px]"
 							alt="BMBF logo"
 						/>
