feat: adjust texts for new ministry name

--- a/src/app/public/components/about/about.component.html
+++ b/src/app/public/components/about/about.component.html
@@ -131,14 +131,14 @@
 							entsprechende Communities aktiviert. Das Forschungsprojekt MINT.OBadges wird von der matrix
 							gGmbH, der mycelia gGmbH und der openSenseLab gGmbH als Verbund gemeinsam umgesetzt und an
 							“Mein Bildungsraum” angeschlossen. Gefördert wird das Projekt vom Bundesministerium für
-							Bildung und Forschung.
+							Forschung, Technologie und Raumfahrt.
 						</p>
 					</div>
 					<div class="supporter-mobile tw-flex tw-flex-col tw-items-center">
 						<img
 							src="../assets/oeb/images/aboutpage/bmftr_logo_de.png"
 							class="tw-w-[279px]"
-							alt="BMBF logo"
+							alt="BMFTR logo"
 						/>
 						<img src="../assets/oeb/images/aboutpage/eu_logo_new.png" class="tw-w-[357px]" alt="EU logo" />
 					</div>
@@ -527,15 +527,15 @@
 							in digital and analog real-world labs, the integration of OEB is being researched and
 							corresponding communities are being activated. The MINT.OBadges research project is jointly
 							implemented by matrix gGmbH, mycelia gGmbH, and openSenseLab gGmbH as a consortium and
-							connected to “Mein Bildungsraum”. The project is funded by the Federal Ministry of Education
-							and Research.
+							connected to “Mein Bildungsraum”. The project is funded by the Federal Ministry of Research,
+							Technology and Space.
 						</p>
 					</div>
 					<div class="supporter-mobile tw-flex tw-flex-col tw-items-center">
 						<img
 							src="../assets/oeb/images/aboutpage/bmftr_logo_en.png"
 							class="tw-w-[279px]"
-							alt="BMBF logo"
+							alt="BMFTR logo"
 						/>
 						<img src="../assets/oeb/images/aboutpage/eu_logo_new.png" class="tw-w-[357px]" alt="EU logo" />
 					</div>
