--- a/src/app/issuer/components/badgeclass-issue-bulk-award-import/badgeclass-issue-bulk-award-import.component.html
+++ b/src/app/issuer/components/badgeclass-issue-bulk-award-import/badgeclass-issue-bulk-award-import.component.html
@@ -29,7 +29,7 @@
 						#fileField
 						label="File"
 						validFileTypes="text/plain,.csv"
-						[control]="csvForm.controls['zipFile']"
+						[control]="zipFileControl"
 						[placeholderImage]="csvUploadIconUrl"
 						(fileData)="onFileDataReceived($event)"
 					>
