--- a/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
+++ b/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
@@ -40,8 +40,8 @@
 					fieldType="text"
 					[control]="qrForm.rawControlMap.createdBy"
 				></oeb-input>
-				<input [formControl]="qrForm.rawControlMap.badgeclass_id" type="hidden" />
-				<input [formControl]="qrForm.rawControlMap.issuer_id" type="hidden" />
+				<input [formControl]="$any(qrForm.rawControlMap.badgeclass_id)" type="hidden" />
+				<input [formControl]="$any(qrForm.rawControlMap.issuer_id)" type="hidden" />
 
 				<span
 					class="tw-mt-6 md:tw-mt-7 tw-text-oebblack tw-font-semibold md:tw-leading-[28px] md:tw-text-[20px] tw-leading-[19px] tw-text-[14px]"
