--- a/src/app/public/components/learningpath/learningpath.component.html
+++ b/src/app/public/components/learningpath/learningpath.component.html
@@ -142,7 +142,7 @@
 						</div>
 					</div>
 
-					<oeb-issuerCard class="tw-mt-8" [issuer]="issuer"></oeb-issuerCard>
+					<oeb-issuerCard class="tw-mt-8" [issuer]="$any(issuer)"></oeb-issuerCard>
 				</div>
 			</div>
 		</div>
