--- a/src/app/recipient/components/recipient-badge-selection-dialog/recipient-badge-selection-dialog.component.html
+++ b/src/app/recipient/components/recipient-badge-selection-dialog/recipient-badge-selection-dialog.component.html
@@ -74,7 +74,7 @@
 											*ngIf="!multiSelectMode"
 										/>
 										<span class="checkbox-x-text visuallyhidden">
-											{{ badge.name }}
+											{{ badge.badgeClass.name }}
 										</span>
 									</label>
 									<label for="badge-check-{{ badge.slug }}">
