--- a/src/app/recipient/components/recipient-badge-collection-detail/recipient-badge-collection-detail.component.html
+++ b/src/app/recipient/components/recipient-badge-collection-detail/recipient-badge-collection-detail.component.html
@@ -75,15 +75,14 @@
 
 				<div class="tw-gap-6 tw-grid tw-grid-cols-badges">
 					<bg-badgecard
-						*ngFor="let entry of collection?.badgeEntries; trackBy: trackById"
+						*ngFor="let entry of collection?.badgeEntries; trackBy: badgeEntryBySlug"
 						[badgeTitle]="entry.badge.apiModel.json.badge.name"
 						[badgeImage]="entry.badge.image"
-						[badgeIssueDate]="entry.badge.apiModel.json.issuedOn"
+						[badgeIssueDate]="badgeIssueDate(entry)"
 						[mostRelevantStatus]="entry.badge.mostRelevantStatus"
 						[issuerTitle]="entry.badge.badgeClass.issuer.name"
 						[issuerSlug]="entry.badge.badgeClass.issuer.slug"
 						[badgeSlug]="entry.badge.slug"
-						(shareClicked)="shareBadge(entry.badge)"
 						[competencies]="entry.badge.getExtension('extensions:CompetencyExtension', [{}])"
 						[showXIcon]="true"
 						(closeEmit)="removeBadge($event)"
