--- a/src/app/recipient/components/recipient-badge-collection-edit-form/recipient-badge-collection-edit-form.component.html
+++ b/src/app/recipient/components/recipient-badge-collection-edit-form/recipient-badge-collection-edit-form.component.html
@@ -94,48 +94,15 @@
 									[badgeDescription]="badge.badge.apiModel.json.badge.description"
 									[badgeSlug]="badge.badge.apiModel.json.badge.slug"
 									[issuerTitle]="badge.badge.apiModel.json.badge.issuer.name"
-									[badgeIssueDate]="badge.badge.createdAt"
-									public="true"
+									[badgeIssueDate]="badgeIssueDate(badge)"
+									[public]="true"
 									[publicUrl]="badge.badge.url"
-									[badgeClass]="true"
-									[issuerSlug]="badge.badge.issuerSlug"
 									(ngModelChange)="checkboxChange($event, badge.badge)"
 									(checkboxChange)="checkboxChange($event, badge.badge)"
 									[checked]="badgeChecked(badge.badge)"
 									[showCheckbox]="true"
 								></bg-badgecard>
 							</div>
-						</ng-container>
-						<ng-container *ngIf="groupBy == 'Kategorie' || groupBy == 'Category'">
-							<ng-container *ngFor="let categoryGroup of badgeResultsByCategory">
-								<h3 class="u-text-h3-semibold u-margin-bottom2x u-margin-top6x u-text-dark1">
-									{{ categoryOptions[categoryGroup.category] }}
-									<span class="u-text-small-semibold-caps u-text-dark4 u-margin-left2x"
-										>{{ categoryGroup.badges.length }}
-										{{ categoryGroup.badges.length == 1 ? 'Badge' : 'Badges' }}</span
-									>
-								</h3>
-								<div class="tw-grid tw-grid-cols-badgesLp tw-gap-6">
-									<!-- TODO: Fix the badgecard link for sharing and routing -->
-									<bg-badgecard
-										*ngFor="let badge of categoryGroup.badges"
-										[badgeTitle]="badge.name"
-										[badgeImage]="badge.image"
-										[badgeDescription]="badge.description"
-										[badgeSlug]="badge.slug"
-										[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer.name"
-										[badgeIssueDate]="badge.createdAt"
-										public="true"
-										[publicUrl]="badge.url"
-										[badgeClass]="true"
-										[competencies]="badge.extension['extensions:CompetencyExtension']"
-										[showCheckbox]="true"
-										(ngModelChange)="checkboxChange($event, badge)"
-										(checkboxChange)="checkboxChange($event, badge)"
-										[checked]="badgeChecked(badge)"
-									></bg-badgecard>
-								</div>
-							</ng-container>
 						</ng-container>
 						<ng-container *ngIf="groupBy == 'Issuer'">
 							<ng-container *ngFor="let issuerGroup of issuerResults">
@@ -150,16 +117,15 @@
 									<!-- TODO: Fix the badgecard link for sharing and routing -->
 									<bg-badgecard
 										*ngFor="let badge of issuerGroup.badges"
-										[badgeTitle]="badge._apiModel.json.badge.name"
-										[badgeImage]="badge._apiModel.json.badge.image"
-										[badgeDescription]="badge._apiModel.json.badge.description"
-										[badgeSlug]="badge._apiModel.json.badge.slug"
-										[issuerTitle]="badge._apiModel.json.badge.issuer.name"
-										[badgeIssueDate]="badge._apiModel.json.badge.createdAt"
-										public="true"
+										[badgeTitle]="badge.badgeClass.name"
+										[badgeImage]="badge.badgeClass.image"
+										[badgeDescription]="badge.badgeClass.description"
+										[badgeSlug]="badge.badgeClass.slug"
+										[issuerTitle]="badge.badgeClass.issuer.name"
+										[badgeIssueDate]="badge.issueDate"
+										[public]="true"
 										[publicUrl]="badge.url"
-										[badgeClass]="true"
-										[competencies]="badge._apiModel.extensions['extensions:CompetencyExtension']"
+										[competencies]="badge.apiModel.extensions['extensions:CompetencyExtension']"
 										[showCheckbox]="true"
 										(ngModelChange)="checkboxChange($event, badge)"
 										(checkboxChange)="checkboxChange($event, badge)"
