--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -12,39 +12,12 @@
 					<oeb-button
 						*ngIf="activeTab === 'badges'"
 						icon="lucideUpload"
-						iconLeft="true"
+						[iconLeft]="true"
 						(click)="uploadBadge()"
 						[disabled-when-requesting]="true"
 						[text]="'RecBadge.uploadBadge' | translate"
 					>
 					</oeb-button>
-					<ng-template #headerTemplate>
-						<h2 hlmH2>Badge hochladen</h2>
-						<span>Füge einen Badge hinzu den du bereits erhalten hast</span>
-					</ng-template>
-					<ng-template #badgeUploadContentTemplate>
-						<form [formGroup]="addRecipientBadgeForm.rawControl" (ngSubmit)="submitBadgeRecipientForm()">
-							<app-badge-tabs
-								[form]="addRecipientBadgeForm"
-								[uploadBadgeImageUrl]="uploadBadgeImageUrl"
-								[formError]="formError"
-								(formErrorCleared)="clearFormError()"
-								(controlChange)="controlUpdated($event)"
-								(tabChange)="onTabChange($event)"
-							></app-badge-tabs>
-
-							<div class="u-responsivepadding-xaxis u-responsivepadding-yaxis l-stack l-stack-right">
-								<button
-									class="button"
-									type="submit"
-									[loading-promises]="[badgeUploadPromise]"
-									loading-message="Hinzufügen"
-								>
-									{{ 'RecBadge.addBadge' | translate }}
-								</button>
-							</div>
-						</form>
-					</ng-template>
 				</div>
 			</ng-template>
 			<div class="oeb-section-sm">
@@ -113,7 +86,7 @@
 								<span>{{ 'Badge.sortBy' | translate }} </span>
 								<oeb-sort-select
 									[control]="sortControl"
-									[result]="badgeResults"
+									[result]="$any(badgeResults)"
 									[recipient]="true"
 								></oeb-sort-select>
 								<oeb-checkbox
@@ -332,9 +305,8 @@
 										[tags]="lp.tags"
 										[slug]="lp.slug"
 										[studyLoad]="calculateStudyLoad(lp)"
-										[completed]="lp.completed"
+										[completed]="lp.completed_at != null"
 										[progress]="lp.progress"
-										[completed]="lp.completed"
 										[requested]="lp.requested"
 										[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
 									></bg-learningpathcard>
@@ -355,7 +327,7 @@
 										[tags]="lp.tags"
 										[slug]="lp.slug"
 										[progress]="lp.progress"
-										[completed]="lp.completed"
+										[completed]="lp.completed_at != null"
 										[requested]="lp.requested"
 										[studyLoad]="calculateStudyLoad(lp)"
 										[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
