fix: more types

--- a/src/app/auth/components/oauth2-authorize/oauth2-authorize.component.html
+++ b/src/app/auth/components/oauth2-authorize/oauth2-authorize.component.html
@@ -20,7 +20,7 @@
 						Know who you are on {{ theme.serviceName || 'Badgr' }}
 					</li>
 					<li class="authlist-x-item" *ngFor="let scope of presentationScopes">
-						<!-- <svg [icon]="'icon_' + iconName(scope.cssName)"></svg> -->
+						<svg [icon]="iconName(scope.cssName)"></svg>
 						{{ scope.label }}
 					</li>
 				</ul>
