--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -86,7 +86,7 @@
 								<span>{{ 'Badge.sortBy' | translate }} </span>
 								<oeb-sort-select
 									[control]="sortControl"
-									[result]="$any(badgeResults)"
+									[result]="badgeResults"
 									[recipient]="true"
 								></oeb-sort-select>
 								<oeb-checkbox
