--- a/src/app/public/components/issuer/issuer.component.html
+++ b/src/app/public/components/issuer/issuer.component.html
@@ -4,9 +4,9 @@
 			<!-- Embedded View -->
 			<oeb-issuer-detail
 				[badges]="badgeClasses"
-				[learningPaths]="$any(learningPaths)"
+				[learningPaths]="learningPaths"
 				[public]="true"
-				[issuer]="$any(issuer)"
+				[issuer]="issuer"
 				[issuerPlaceholderSrc]="issuerImagePlaceholderUrl"
 			></oeb-issuer-detail>
 		</ng-template>
