fix: use providedIn root for most services to fix injections

--- a/src/app/public/components/start/start.component.html
+++ b/src/app/public/components/start/start.component.html
@@ -252,14 +252,14 @@
 							class="md:tw-block tw-hidden tw-pl-[100px] tw-pr-[20%] tw-box-border tw-absolute tw-bg-top tw-top-[5px] tw-scale-y-[0.8] tw-w-full"
 						>
 							<div
-								class="tw-w-full tw-h-[450px] tw-bg-repeat-x tw-bg-[url('assets/oeb/images/startpage/red_lines_cut.png')]"
+								class="tw-w-full tw-h-[450px] tw-bg-repeat-x tw-bg-[url('../../assets/oeb/images/startpage/red_lines_cut.png')]"
 							></div>
 						</div>
 						<div
 							class="tw-block md:tw-hidden tw-box-border tw-absolute tw-bg-top tw-top-[0px] tw-w-full tw-h-full"
 						>
 							<div
-								class="tw-relative tw-top-[-70px] tw-translate-x-[-50%] tw-left-[96px] tw-rotate-90 tw-w-[700px] tw-h-full tw-bg-right tw-bg-repeat-x tw-bg-[url('assets/oeb/images/startpage/red_lines_cut.png')]"
+								class="tw-relative tw-top-[-70px] tw-translate-x-[-50%] tw-left-[96px] tw-rotate-90 tw-w-[700px] tw-h-full tw-bg-right tw-bg-repeat-x tw-bg-[url('../../assets/oeb/images/startpage/red_lines_cut.png')]"
 							></div>
 						</div>
 						<div class="tw-p-4 md:tw-w-[24%] tw-w-[100%] md:tw-max-w-[300px]">
