refactor: remove message service from oeb-button and badgr-button

--- a/src/app/auth/components/reset-password/reset-password.component.html
+++ b/src/app/auth/components/reset-password/reset-password.component.html
@@ -56,13 +56,7 @@
 							text="{{ 'General.cancel' | translate }}"
 						></oeb-button>
 
-						<oeb-button
-							type="submit"
-							width="max_content"
-							text="{{ 'Login.changePassword' | translate }}"
-							[loading-when-requesting]="true"
-							loading-message="Change Password"
-						>
+						<oeb-button type="submit" width="max_content" text="{{ 'Login.changePassword' | translate }}">
 						</oeb-button>
 					</div>
 				</form>
