--- a/src/app/profile/components/change-password/change-password.component.html
+++ b/src/app/profile/components/change-password/change-password.component.html
@@ -64,13 +64,7 @@
 					text="{{ 'General.cancel' | translate }}"
 				></oeb-button>
 
-				<oeb-button
-					type="submit"
-					width="max_content"
-					text="{{ 'Profile.changePass' | translate }}"
-					[loading-when-requesting]="true"
-					loading-message="{{ 'Profile.changePass' | translate }}"
-				>
+				<oeb-button type="submit" width="max_content" text="{{ 'Profile.changePass' | translate }}">
 				</oeb-button>
 			</div>
 
