--- a/src/app/profile/components/oauth-app-detail/oauth-app-detail.html
+++ b/src/app/profile/components/oauth-app-detail/oauth-app-detail.html
@@ -11,7 +11,7 @@
 					</p>
 					This application has been granted permission to sign you in using your Badgr account.
 					<div class="u-margin-top1x" *ngIf="app.websiteUrl">
-						<a class="u-text-outlink" [href]="app.websiteUrl" attr.aria-labelledby="heading" target="_blank"
+						<a class="u-text-outlink" [href]="app.websiteUrl" aria-labelledby="heading" target="_blank"
 							>Visit Website
 							<svg icon="icon_external_link"></svg>
 						</a>
