--- a/src/app/catalog/components/badge-catalog/badge-catalog.component.html
+++ b/src/app/catalog/components/badge-catalog/badge-catalog.component.html
@@ -7,10 +7,10 @@
 				<div class="tw-z-10 tw-relative">
 					<h1 hlmH1 class="tw-text-oebblack">{{ 'Badge.catalogHeadline' | translate }}</h1>
 					<h1 hlmH1 class="lg:tw-pl-[10%] tw-font-black tw-text-purple">
-						<span [countUp]="badges.length">{{ badges.length }}</span
-						>{{ null | i18nPlural: plural['badges'] }} in
-						<span [countUp]="issuers.length">{{ issuers.length }}</span
-						>{{ null | i18nPlural: plural['issuer'] }}
+						<span [countUp]="badges.length">{{ badges.length }}</span>
+						{{ badgesPluralWord }} in
+						<span [countUp]="issuers.length">{{ issuers.length }}</span>
+						{{ issuersPluralWord }}
 					</h1>
 				</div>
 			</div>
