--- a/src/app/catalog/components/issuer-catalog/issuer-catalog.component.html
+++ b/src/app/catalog/components/issuer-catalog/issuer-catalog.component.html
@@ -7,9 +7,9 @@
 			</h2>
 			<ng-template [showLoader]="false" [bgAwaitPromises]="[issuersLoaded]">
 				<span hlmH1 class="lg:tw-pl-[10%] tw-text-purple tw-font-black tw-break-words">
-					<span [countUp]="issuers.length"> </span>
+					<span [countUp]="issuers.length">{{ issuers.length }}</span>
 					<span>
-						{{ null | i18nPlural: plural['issuerText'] }}
+						{{ issuersPluralWord }}
 					</span>
 				</span>
 			</ng-template>
