--- a/src/app/public/components/issuer/issuer.component.html
+++ b/src/app/public/components/issuer/issuer.component.html
@@ -6,7 +6,7 @@
 				[badges]="badgeClasses"
 				[learningPaths]="learningPaths"
 				[public]="true"
-				[issuer]="$any(issuer)"
+				[issuer]="issuer"
 				[issuerPlaceholderSrc]="issuerImagePlaceholderUrl"
 			></oeb-issuer-detail>
 		</ng-template>
