--- a/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
+++ b/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
@@ -69,7 +69,7 @@
 					<div class="tw-grid min-[450px]:tw-grid-cols-learningpaths tw-gap-6 tw-items-center" [@stagger]>
 						<bg-learningpathcard
 							*ngFor="let lp of learningPathResults"
-							[@appearAnimation]="state"
+							@appearAnimation
 							[badgeImage]="lp.participationBadgeImage"
 							[name]="lp.name"
 							[issuerTitle]="lp.issuer_name"
