--- a/src/app/common/components/learningpath-detail/oeb-learning-path.component.html
+++ b/src/app/common/components/learningpath-detail/oeb-learning-path.component.html
@@ -95,7 +95,7 @@
 					<div
 						class="tw-relative"
 						*ngFor="let badge of learningPathReverseBadges; let i = index"
-						[@inOutAnimation]="state"
+						@inOutAnimation
 					>
 						<div class="tw-absolute tw-left-[-69px] md:tw-left-[-69px] tw-top-[50%] tw-translate-y-[-50%]">
 							<div class="tw-flex tw-items-center tw-justify-center tw-w-[56px] tw-h-[56px] tw-relative">
