--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.html
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.html
@@ -1,1 +1,24 @@
-<div #d3canvas></div>
+<p class="tw-mt-6 tw-mb-2">
+	<strong>{{ 'RecBadge.skillVisualisationIntro' | translate }}</strong>
+</p>
+<div class="tw-bg-white">
+	<p class="tw-p-4 tw-text-purple tw-italic">{{ 'RecBadge.skillVisualisationHelp' | translate }}</p>
+	<div #d3canvas></div>
+	@if (hasFutureSkills) {
+	<div class="tw-p-2 visualiser-legend">
+		<span class="visualiser-legend__esco">ESCO-Bereiche</span>
+		<span class="visualiser-legend__future">Future Skills nach Ulf Ehers</span>
+	</div>
+	}
+	<div class="mobile-overview tw-p-2">
+		<ul>
+			@for (skill of getTopLevelSkills(); track skill.id) {
+				<li class="tw-flex tw-between">
+					{{ skill.name }}
+					{{ skill.studyLoad }} h
+				</li>
+			}
+		</ul>
+	</div>
+
+</div>
