--- a/src/app/issuer/components/issuer-staff/issuer-staff.component.html
+++ b/src/app/issuer/components/issuer-staff/issuer-staff.component.html
@@ -198,10 +198,11 @@
 						<div class="forminput forminput-full" *ngIf="isCurrentUserIssuerOwner">
 							<div class="forminput-x-inputs">
 								<select
+									#memberSelect
 									class="!tw-border-purple !tw-border-solid !tw-text-oebblack tw-rounded-[10px] tw-text-lg"
 									[ngModel]="member.roleSlug"
 									[disabled]="member == issuer.currentUserStaffMember"
-									(change)="changeMemberRole(member, $event.target.value)"
+									(change)="changeMemberRole(member, $any(memberSelect.value))"
 									*ngIf="isCurrentUserIssuerOwner"
 								>
 									<option *ngFor="let role of issuerStaffRoleOptions" [value]="role.value">
