fix: boolean type

--- a/src/app/common/dialogs/export-pdf-dialog/export-pdf-dialog.component.html
+++ b/src/app/common/dialogs/export-pdf-dialog/export-pdf-dialog.component.html
@@ -34,7 +34,7 @@
 					(click)="downloadPdf()"
 					loading-message="Downloading..."
 					[disabled-when-requesting]="true"
-					[disabled]="pdfError"
+					[disabled]="!!pdfError"
 				>
 					Herunterladen
 				</button>
